--- a/myreportapp/www/signup.html
+++ b/myreportapp/www/signup.html
@@ -11,14 +11,15 @@
   <h1>Welcome to Reportee App</h1>
     <div class="container">
       <form action="/index.html">
-        <h1>Login here</h1>
+        <h1>Create an account</h1>
         <input type="text" placeholder="Username" id="form-username"/>
+        <input type="email" placeholder="Email" id="form-email"/>
         <input type="password" placeholder="Password" id="form-password"/>
-        <a href="signup.html"
+        <a href="index.html"
         style="color: white;"
-        >Have an account ? <span style="color: #eee;">Sign up here</span> </a>
+        >Have an account ? <span style="color: #eee;">Sign in here</span> </a>
         <div>
-            <button class="spinner-btn"><span id="btn-name">Sign in</span><div id="spinner" class="spinner"></div></button>
+            <button class="spinner-btn"><span id="btn-name">Sign Up</span><div id="spinner" class="spinner"></div></button>
         </div>
       </form>
   </div>
