--- a/myreportapp/www/notification.html
+++ b/myreportapp/www/notification.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/notification.css">
         <link rel="stylesheet" href="css/general.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <title>Hello World</title>
+        <title>Reportee</title>
     </head>
     <body>
         <div class="app">
@@ -86,6 +86,7 @@
 </nav>
 </footer>
 </div>
+<script src="js/toastify.js" ></script>
         <script src="cordova.js"></script>
         <script src="js/route.js"></script>
         <script src="js/index.js"></script>
