--- a/myreportapp/www/post.html
+++ b/myreportapp/www/post.html
@@ -27,14 +27,19 @@
                 <div>
                     Choose an incident type:
                     <select id="incident-type" name="incident-type">
-                      <option value="fire">Fire</option>
-                      <option value="medical">Medical Emergency</option>
-                      <option value="theft">Theft</option>
-                      <option value="accident">Accident</option>
-                      <option value="harassment">Harassment</option>
-                      <option value="vandalism">Vandalism</option>
-                      <option value="power-outage">Power Outage</option>
-                      <option value="other">Other</option>
+                            <option value="Physical Security">Physical Security</option>
+                            <option value="Assault">Assault</option>
+                            <option value="Fire">Fire</option>
+                            <option value="Workplace">Workplace</option>
+                            <option value="Data Breach">Data Breach</option>
+                            <option value="Legal">Legal</option>
+                            <option value="Environmental">Environmental</option>
+                            <option value="Customer">Customer</option>
+                            <option value="Fraud">Fraud</option>
+                            <option value="Health">Health</option>
+                            <option value="Fighting">Fighting</option>
+                            <option value="Rioting">Rioting</option>
+                            <option value="Accident">Accident</option>
                     </select>
             </div>
             <div style="display: flex;gap:10px" id="add-btn-container">
@@ -66,6 +71,7 @@
 </nav>
 </footer>
 </div>
+<script src="js/toastify.js" ></script>
         <script src="cordova.js"></script>
         <script src="js/route.js"></script>
         <script src="js/post.js"></script>
