added new routes for post

--- a/myreportapp/www/notification.html
+++ b/myreportapp/www/notification.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/notification.css">
         <link rel="stylesheet" href="css/general.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <title>Reportee</title>
+        <title>SecureReport</title>
     </head>
     <body>
         <div class="app">
