--- a/myreportapp/www/post.html
+++ b/myreportapp/www/post.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <!-- <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js"></script> -->
     <!--    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     -->    
     <meta name="format-detection" content="telephone=no">
@@ -22,12 +23,13 @@
             </header>
         <main id="post">
             <h2>Post an Incident</h2>
-            <form id="post-form">
-                <textarea placeholder="Describe the incident"></textarea>
+            <form id="post-form" enctype="multipart/form-data" >
+                <input type="text" style="padding: 8px;" placeholder="Title the incident" id="post-title" name="title" required />
+                <textarea placeholder="Describe the incident" id="post-content" name="content" required></textarea>
                 <div>
                     Choose an incident type:
-                    <select id="incident-type" name="incident-type">
-                            <option value="Physical Security">Physical Security</option>
+                    <select id="incident-type" name="category" required>
+                            <option value="Physical Security" selected>Physical Security</option>
                             <option value="Assault">Assault</option>
                             <option value="Fire">Fire</option>
                             <option value="Workplace">Workplace</option>
@@ -42,14 +44,45 @@
                             <option value="Accident">Accident</option>
                     </select>
             </div>
-            <div style="display: flex;gap:10px" id="add-btn-container">
-                <button id="add-image-btn" style="flex: 1;"><img src='img/plus.svg'><p>Add Image with Camera</p></button>
-                <button id="add-image-gallery-btn" style="flex: 1;"><img src='img/plus.svg'><p>Add Image with Gallery</p></button>
+            <div style="display: flex;gap:10px;flex-direction: column;justify-content: flex-start;align-items: flex-start;" id="add-btn-container">
+                <input type="file"  placeholder="select a file" name="file"required  id="file" accept="image/*"/>
+                <div id="capturePhoto" style="
+                display: inline-block;
+                padding: 5px 10px;
+                background-color: #ff4b2b;
+                color: white;
+                text-align: center;
+                border-radius: 5px;
+                cursor: pointer;
+                font-family: Arial, sans-serif;
+                font-size: 16px;
+                box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+                user-select: none;
+            ">Capture Photo</div>
+            </div>
+            <div style="display: flex;gap:10px;flex-direction: column;justify-content: flex-start;align-items: flex-start;">
+                <input type="text" disabled id="location" placeholder="Add location" required/>
+                <div id="getlocation" style="
+                display: inline-block;
+                padding: 5px 10px;
+                background-color: #ff4b2b;
+                color: white;
+                white-space:nowrap;
+                border-radius: 5px;
+                cursor: pointer;
+                font-family: Arial, sans-serif;
+                font-size: 16px;
+                box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+                user-select: none;
+            ">Get Location</div>
             </div>
                 <div id="send-form-btn-container">
-                    <button id="send-form-btn">Send form</button>
+                    <button class="spinner-btn"><span id="btn-name">Upload post</span></div></button>
                 </div>
-                <img id="post-image" src="" />
+                <div style="display: flex;gap:10px;">
+                    <img id="imagePreview" src="" alt="Image Preview" style="display: none; max-width: 200px;">
+                </div>
+                <input id="token"/>
             </form>
         </main>
 <footer>
@@ -64,15 +97,19 @@
         <div class="nav-item" id="userbtn">
             <img src="img/user.svg" />
         </div>
-        <div class="nav-item" id="notifybtn">
-            <img src="img/bell.svg" />
-        </div>
     </ul>
 </nav>
 </footer>
 </div>
+<div id="loadingModal" class="modal">
+    <div class="modal-content">
+        <div class="spinner"></div>
+        <p>Loading, please wait...</p>
+    </div>
+</div>
+<script src="cordova.js"></script>
 <script src="js/toastify.js" ></script>
-        <script src="cordova.js"></script>
+        <script src="js/loc.js" ></script>
         <script src="js/route.js"></script>
         <script src="js/post.js"></script>
         <script src="js/index.js"></script>
