--- a/myreportapp/www/signup.html
+++ b/myreportapp/www/signup.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-  <h1>Welcome to Reportee App</h1>
+  <h1>Welcome to SecureReport App</h1>
     <div class="container">
       <form action="/index.html">
         <h1>Create an account</h1>
