--- a/myreportapp/www/post.html
+++ b/myreportapp/www/post.html
@@ -29,7 +29,7 @@
                 <div>
                     Choose an incident type:
                     <select id="incident-type" name="category" required>
-                            <option value="Physical Security" selected>Physical Security</option>
+                            <option value="Physical Security">Physical Security</option>
                             <option value="Assault">Assault</option>
                             <option value="Fire">Fire</option>
                             <option value="Workplace">Workplace</option>
@@ -45,7 +45,7 @@
                     </select>
             </div>
             <div style="display: flex;gap:10px;flex-direction: column;justify-content: flex-start;align-items: flex-start;" id="add-btn-container">
-                <input type="file"  placeholder="select a file" name="file"required  id="file" accept="image/*"/>
+                <input type="file"  placeholder="select a file" name="file"  id="file" accept="image/*"/>
                 <div id="capturePhoto" style="
                 display: inline-block;
                 padding: 5px 10px;
