--- a/myreportapp/www/home.html
+++ b/myreportapp/www/home.html
@@ -22,8 +22,8 @@
         <main>
             <div class="search-container">
                 <select class="search-input">
-                    <option value="all">All</option>
-                        <option value="Physical Security" selected>Physical Security</option>
+                    <option value="all" selected>All</option>
+                        <option value="Physical Security">Physical Security</option>
                         <option value="Assault">Assault</option>
                         <option value="Fire">Fire</option>
                         <option value="Workplace">Workplace</option>
