--- a/myreportapp/www/post.html
+++ b/myreportapp/www/post.html
@@ -29,7 +29,7 @@
                 <div>
                     Choose an incident type:
                     <select id="incident-type" name="category" required>
-                            <option value="Physical Security">Physical Security</option>
+                            <option value="Physical Security" selected>Physical Security</option>
                             <option value="Assault">Assault</option>
                             <option value="Fire">Fire</option>
                             <option value="Workplace">Workplace</option>
@@ -82,7 +82,7 @@
                 <div style="display: flex;gap:10px;">
                     <img id="imagePreview" src="" alt="Image Preview" style="display: none; max-width: 200px;">
                 </div>
-                <input id="token"/>
+                <input type="hidden" id="token" />
             </form>
         </main>
 <footer>
